Ecology section updates

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1394,6 +1394,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\QT38IXYE\\Chin and Sillett - 2019 - Within-crown plasticity in leaf traits among the t.pdf;C\:\\Users\\Me\\Zotero\\storage\\27HZSRMA\\ajb2.html}
 }
 
+@article{chitra-tarakHydraulicallyvulnerableTreesSurvive,
+  title = {Hydraulically-Vulnerable Trees Survive on Deep-Water Access during Droughts in a Tropical Forest},
+  author = {Chitra-Tarak, Rutuja and Xu, Chonggang and Aguilar, Salomón and Anderson-Teixeira, Kristina J. and Chambers, Jeff and Detto, Matteo and Faybishenko, Boris and Fisher, Rosie A. and Knox, Ryan G. and Koven, Charles D. and Kueppers, Lara M. and Kunert, Nobert and Kupers, Stefan J. and McDowell, Nate G. and Newman, Brent D. and Paton, Steven R. and Pérez, Rolando and Ruiz, Laurent and Sack, Lawren and Warren, Jeffrey M. and Wolfe, Brett T. and Wright, Cynthia and Wright, S. Joseph and Zailaa, Joseph and McMahon, Sean M.},
+  journaltitle = {New Phytologist},
+  volume = {n/a},
+  number = {n/a},
+  issn = {1469-8137},
+  doi = {10.1111/nph.17464},
+  url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.17464},
+  urldate = {2021-07-27},
+  abstract = {Deep-water access is arguably the most effective, but under-studied, mechanism that plants employ to survive during drought. Vulnerability to embolism and hydraulic safety margins can predict mortality risk at given levels of dehydration, but deep-water access may delay plant dehydration. Here, we tested the role of deep-water access in enabling survival within a diverse tropical forest community in Panama using a novel data-model approach. We inversely estimated the effective rooting depth (ERD, as the average depth of water extraction), for 29 canopy species by linking diameter growth dynamics (1990–2015) to vapor pressure deficit, water potentials in the whole-soil column, and leaf hydraulic vulnerability curves. We validated ERD estimates against existing isotopic data of potential water-access depths. Across species, deeper ERD was associated with higher maximum stem hydraulic conductivity, greater vulnerability to xylem embolism, narrower safety margins, and lower mortality rates during extreme droughts over 35 years (1981–2015) among evergreen species. Species exposure to water stress declined with deeper ERD indicating that trees compensate for water stress-related mortality risk through deep-water access. The role of deep-water access in mitigating mortality of hydraulically-vulnerable trees has important implications for our predictive understanding of forest dynamics under current and future climates.},
+  langid = {english},
+  keywords = {deep-water access,drought tolerance,drought-induced mortality,hydraulic vulnerability and safety margins,hydrological droughts,rooting depths,safety-efficiency trade-off,tropical forest},
+  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17464},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\J8DUYAJU\\Chitra-Tarak et al. - Hydraulically-vulnerable trees survive on deep-wat.pdf}
+}
+
 @article{christoffersenLinkingHydraulicTraits2016,
   title = {Linking Hydraulic Traits to Tropical Forest Function in a Size-Structured and Trait-Driven Model ({{TFS}} v.1-{{Hydro}})},
   author = {Christoffersen, Bradley O and Gloor, Manuel and Fauset, Sophie and Fyllas, Nikolaos M and Galbraith, David R and Baker, R and Kruijt, Bart and Rowland, Lucy and Fisher, Rosie A and Binks, Oliver J and Sevanto, Sanna and Xu, Chonggang and Jansen, Steven and Choat, Brendan and Mencuccini, Maurizio and McDowell, Nate G and Meir, Patrick},
@@ -2473,6 +2490,18 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\7YR3BK3S\\Friedlingstein et al. - 2006 - Climate–Carbon Cycle Feedback Analysis Results fr.pdf}
 }
 
+@book{frittsTreeRingsClimate1976,
+  title = {Tree rings and climate},
+  author = {Fritts, H. C.},
+  date = {1976},
+  publisher = {{Academic Press}},
+  location = {{London; New York}},
+  abstract = {Tree Rings and Climate.},
+  isbn = {978-0-323-14528-2},
+  langid = {English.},
+  annotation = {OCLC: 1162299449}
+}
+
 @article{garciaImportanceHydraulicStrategy2021,
   title = {Importance of Hydraulic Strategy Trade-Offs in Structuring Response of Canopy Trees to Extreme Drought in Central {{Amazon}}},
   author = {Garcia, Maquelle Neves and Ferreira, Marciel José and Ivanov, Valeriy and dos Santos, Victor Alexandre Hardt Ferreira and Ceron, João Vitor and Guedes, Alacimar Viana and Saleska, Scott Reid and Oliveira, Rafael Silva},
@@ -2600,6 +2629,23 @@
   langid = {english},
   keywords = {Carbon assimilation,Dew,Fog,Leaf energy balance,Leaf wetness,Transpiration suppression},
   file = {C\:\\Users\\Me\\Zotero\\storage\\RCNG6MN2\\Gerlein-Safdi et al. - 2018 - Dew deposition suppresses transpiration and carbon.pdf;C\:\\Users\\Me\\Zotero\\storage\\LF4T5VP3\\S0168192318301679.html}
+}
+
+@article{gillerotTreeNeighbourhoodDiversity2020,
+  title = {Tree {{Neighbourhood Diversity Has Negligible Effects}} on {{Drought Resilience}} of {{European Beech}}, {{Silver Fir}} and {{Norway Spruce}}},
+  author = {Gillerot, Loïc and Forrester, David I. and Bottero, Alessandra and Rigling, Andreas and Lévesque, Mathieu},
+  date = {2020-04-01},
+  journaltitle = {Ecosystems},
+  volume = {24},
+  number = {1},
+  pages = {20--36},
+  issn = {1435-0629},
+  doi = {10.1007/s10021-020-00501-y},
+  url = {https://doi.org/10.1007/s10021-020-00501-y},
+  urldate = {2021-07-27},
+  abstract = {Promoting tree species diversity is commonly advocated in the anticipation of predicted increases in drought frequency and severity. However, mixing effects on drought responses vary substantially with site conditions and species identity. We combined annually resolved tree-ring data and repeated forest inventory data spanning the last 90~years to examine the effect of species-specific neighbourhood competition on the drought response (resistance, recovery and resilience) of European beech (Fagus sylvatica), silver fir (Abies alba) and Norway spruce (Picea abies) for six drought events that occurred since the 1970s at three sites in Switzerland. We found predominantly weak neighbourhood competition and tree species diversity effects, with significant interspecific influences only for resistance and recovery of beech. These minor neighbourhood effects were outweighed by tree age and size effects. Although age effects depended on species identity and components of resilience, tree size consistently negatively affected all species. Our results emphasize that diversity effects may vary for each given species combination which makes broader conclusions challenging. This is because species interact through their specific set of traits and interactions vary in space and time. Adaptive management strategies are likely to be more effective when they promote more drought-tolerant species and reductions in stand density. Despite the absence of an unequivocal advantage of tree diversity on drought resilience, striving towards species-rich forests nonetheless allows for a risk spreading among multiple species and the reinforced provision of numerous ecosystem services.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\6GIKIGF2\\Gillerot et al. - 2021 - Tree Neighbourhood Diversity Has Negligible Effect.pdf}
 }
 
 @incollection{givnishAdaptiveSignificanceLeaf1979,
@@ -5261,6 +5307,15 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\43ESPCJK\\McDowell et al. - 2020 - Pervasive shifts in forest dynamics in a changing .pdf}
 }
 
+@incollection{mcdowellRelationshipTreeHeight2011,
+  title = {Relationship between Tree Height and Carbon Isotope Discrimination},
+  booktitle = {F.{{C}}. {{Meinzer}} and {{U}}. {{Niinemets}}, Eds. {{Size}} and Age Related Changes in Tree Structure and Function},
+  author = {McDowell, N.G. and Bond, B.J. and Hill, L. and Ryan, M.G. and Whitehead, D.},
+  date = {2011},
+  pages = {255--286},
+  publisher = {{Springer Publishing}}
+}
+
 @article{mcgregor_tree_nodate,
   title = {Tree Height and Drought Tolerance Traits Shape Growth Responses across Droughts in a Temperate Broadleaf Forest},
   author = {McGregor, Ian and Helcoski, Ryan and Kunert, Norbert and Tepley, A. J. and Gonzalez-Akre, Erika B. and Herrmann, Valentine and Zailaa, Joseph and Stovall, Atticus E. L. and Bourg, Norman A. and McShea, William J. and Pederson, Neil and Sack, Lawren and Anderson-Teixeira, K.J.},
@@ -5357,6 +5412,24 @@
   abstract = {Studies on plasticity at the level of a single individual plant provide indispensable information to predict leaf responses to climate change, because they allow better identification of the environmental factors that determine differences in leaf traits in the absence of genetic differences. Most of these studies have focused on the responses of leaf traits to variations in the light environment along vertical gradients, thus paying less attention to possible differences in the intensity of water stress among canopy orientations. In this paper, we analyzed the differences in leaf traits traditionally associated with changes in the intensity of water stress between east and west crown orientations in three Quercus species. The leaves facing west experienced similar solar radiation levels but higher maximum temperatures and lower daily minimum water potentials than those of the east orientation. In response to these differences, the leaves of the west orientation showed smaller size and less chlorophyll concentration, higher percentage of palisade tissue and higher density of stomata and trichomes. These responses would confirm the role of such traits in the tolerance to water stress and control of water losses by transpiration. For all traits, the species with the longest leaf life span exhibited the greatest plasticity between orientations. By contrast, no differences between canopy positions were observed for leaf thickness, leaf mass per unit area and venation patterns.},
   pmcid = {PMC6816560},
   file = {C\:\\Users\\Me\\Zotero\\storage\\6V4QBEGH\\Mediavilla et al. - 2019 - Foliar plasticity related to gradients of heat and.pdf}
+}
+
+@article{mediavillaStomatalResponsesDrought2004,
+  title = {Stomatal Responses to Drought of Mature Trees and Seedlings of Two Co-Occurring {{Mediterranean}} Oaks},
+  author = {Mediavilla, Sonia and Escudero, Alfonso},
+  date = {2004-01-23},
+  journaltitle = {Forest Ecology and Management},
+  volume = {187},
+  number = {2},
+  pages = {281--294},
+  issn = {0378-1127},
+  doi = {10.1016/j.foreco.2003.07.006},
+  url = {https://www.sciencedirect.com/science/article/pii/S0378112703003827},
+  urldate = {2021-07-27},
+  abstract = {We studied stomatal responses to decreasing predawn water potential (Ψpd) and increasing leaf-to-air water vapour pressure deficit (VPD) of seedlings and mature trees of two co-occurring Mediterranean oaks with contrasting leaf habits: the evergreen Quercus rotundifolia and the deciduous Quercus faginea. Our objective was to define and to compare the stomatal strategies of both species for drought resistance and to identify the possible differences between growth stages in selected drought adaptation attributes. Among the mature trees, Q. rotundifolia exhibited a water-use behaviour that was more conservative than that of Q. faginea: lower maximum stomatal conductances and greater sensitivity to VPD than the deciduous species. As a result, the leaf water potential of the evergreen species never decreased along the day and along the growth season as much as in the deciduous species; this may help to guarantee longer leaf longevity by avoiding irreversible damage during the summer drought. The seedlings of the two species showed a less conservative water-use strategy in comparison with adult trees: a relatively high stomatal conductance and lower stomatal sensitivity to soil and atmospheric drought. As a consequence, leaf water potential decreased more in the seedlings along the day than in the adults. Q. rotundifolia was the species for which the most pronounced differences between growth stages were obtained. Thus, interspecific differences in response to drought disappeared in the first stages of the life of the trees, and the seedlings of the two species showed a common strategy, probably as a response to the competition from the herbaceous layer. A low stomatal sensitivity in benefit of an increase in growth would probably be a more successful strategy under the competitive conditions that seedlings experience during their establishment.},
+  langid = {english},
+  keywords = {Drought,Growth stages,Leaf water potential,Mediterranean  species,Stomatal conductance,Vapour pressure deficit},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\92DP54C7\\Mediavilla and Escudero - 2004 - Stomatal responses to drought of mature trees and .pdf;C\:\\Users\\Me\\Zotero\\storage\\6L9YPM3J\\S0378112703003827.html}
 }
 
 @article{meehlMoreIntenseMore2004,
@@ -6303,6 +6376,27 @@
   keywords = {Cupressaceae,hydrostatic gradient,leaf expansion,mesophyll porosity,Sequoia sempervirens,sun leaves,tracheid collapse,transfusion tissue,water stress},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.3732/ajb.0900214},
   file = {C\:\\Users\\Me\\Zotero\\storage\\25MGUXXP\\Oldham et al. - 2010 - The hydrostatic gradient, not light availability, .pdf}
+}
+
+@article{olsonPlantHeightHydraulic2018,
+  title = {Plant Height and Hydraulic Vulnerability to Drought and Cold},
+  author = {Olson, Mark E. and Soriano, Diana and Rosell, Julieta A. and Anfodillo, Tommaso and Donoghue, Michael J. and Edwards, Erika J. and León-Gómez, Calixto and Dawson, Todd and Martínez, J. Julio Camarero and Castorena, Matiss and Echeverría, Alberto and Espinosa, Carlos I. and Fajardo, Alex and Gazol, Antonio and Isnard, Sandrine and Lima, Rivete S. and Marcati, Carmen R. and Méndez-Alonzo, Rodrigo},
+  date = {2018-07-17},
+  journaltitle = {PNAS},
+  volume = {115},
+  number = {29},
+  eprint = {29967148},
+  eprinttype = {pmid},
+  pages = {7551--7556},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1721728115},
+  url = {https://www.pnas.org/content/115/29/7551},
+  urldate = {2021-07-27},
+  abstract = {Understanding how plants survive drought and cold is increasingly important as plants worldwide experience dieback with drought in moist places and grow taller with warming in cold ones. Crucial in plant climate adaptation are the diameters of water-transporting conduits. Sampling 537 species across climate zones dominated by angiosperms, we find that plant size is unambiguously the main driver of conduit diameter variation. And because taller plants have wider conduits, and wider conduits within species are more vulnerable to conduction-blocking embolisms, taller conspecifics should be more vulnerable than shorter ones, a prediction we confirm with a plantation experiment. As a result, maximum plant size should be short under drought and cold, which cause embolism, or increase if these pressures relax. That conduit diameter and embolism vulnerability are inseparably related to plant size helps explain why factors that interact with conduit diameter, such as drought or warming, are altering plant heights worldwide.},
+  langid = {english},
+  keywords = {adaptation,allometry,climate change,embolism vulnerability,forest dieback},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\UT9RF97J\\Olson et al. - 2018 - Plant height and hydraulic vulnerability to drough.pdf;C\:\\Users\\Me\\Zotero\\storage\\LUW7PD6K\\7551.html}
 }
 
 @online{OntogenicChangesRather,
@@ -7396,6 +7490,25 @@
   keywords = {canopy position,climate-growth relationship,forest structure,generalized additive models,tree rings},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ecy.3264},
   file = {C\:\\Users\\Me\\Zotero\\storage\\EYIBWXME\\Rollinson et al. - Climate sensitivity of understory trees differs fr.pdf;C\:\\Users\\Me\\Zotero\\storage\\UJUZMBBY\\ecy.html}
+}
+
+@article{rollinsonClimateSensitivityUnderstory2021,
+  title = {Climate Sensitivity of Understory Trees Differs from Overstory Trees in Temperate Mesic Forests},
+  author = {Rollinson, Christine R. and Alexander, M. Ross and Dye, Alex W. and Moore, David J. P. and Pederson, Neil and Trouet, Valerie},
+  date = {2021},
+  journaltitle = {Ecology},
+  volume = {102},
+  number = {3},
+  pages = {e03264},
+  issn = {1939-9170},
+  doi = {10.1002/ecy.3264},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.1002/ecy.3264},
+  urldate = {2021-07-27},
+  abstract = {The response of understory trees to climate variability is key to understanding current and future forest dynamics. However, analyses of climatic effects on tree growth have primarily focused on the upper canopy, leaving understory dynamics unresolved. We analyzed differences in climate sensitivity based on canopy position of four common tree species (Acer rubrum, Fagus grandifolia, Quercus rubra, and Tsuga canadensis) using growth information from 1,084 trees across eight sites in the northeastern United States. Effects of canopy position on climate response varied, but were significant and often nonlinear, for all four species. Compared to overstory trees, understory trees showed stronger reductions in growth at high temperatures and varied shifts in precipitation response. This contradicts the prevailing assumption that climate responses, particularly to temperature, of understory trees are buffered by the overstory. Forest growth trajectories are uncertain in compositionally and structurally complex forests, and future demography and regeneration dynamics may be misinferred if not all canopy levels are represented in future forecasts.},
+  langid = {english},
+  keywords = {canopy position,climate–growth relationship,forest structure,generalized additive models,tree rings},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ecy.3264},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\IDJX2MP3\\Rollinson et al. - 2021 - Climate sensitivity of understory trees differs fr.pdf;C\:\\Users\\Me\\Zotero\\storage\\M6K928AU\\ecy.html}
 }
 
 @article{romero-montepaoneShadeAvoidanceResponses2020,
@@ -8662,6 +8775,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\9WFCWDNX\\Storck et al. - 2002 - Measurement of snow interception and canopy effect.pdf;C\:\\Users\\Me\\Zotero\\storage\\QPCNZBHK\\2002WR001281.html}
 }
 
+@article{stovallTreeHeightExplains2019,
+  title = {Tree Height Explains Mortality Risk during an Intense Drought},
+  author = {Stovall, Atticus E. L. and Shugart, Herman and Yang, Xi},
+  date = {2019-09-26},
+  journaltitle = {Nature Communications},
+  volume = {10},
+  number = {1},
+  pages = {4385},
+  publisher = {{Nature Publishing Group}},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-019-12380-6},
+  url = {https://www.nature.com/articles/s41467-019-12380-6},
+  urldate = {2020-08-18},
+  abstract = {Forest mortality is accelerating due to climate change and the largest trees may be at the greatest risk, threatening critical ecological, economic, and social benefits. Here, we combine high-resolution airborne LiDAR and optical data to track tree-level mortality rates for \textasciitilde 2 million trees in California over 8 years, showing that tree height is the strongest predictor of mortality during extreme drought. Large trees die at twice the rate of small trees and environmental gradients of temperature, water, and competition control the intensity of the height-mortality relationship. These findings suggest that future persistent drought may cause widespread mortality of the largest trees on Earth.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\Y69LSHC7\\Stovall et al. - 2019 - Tree height explains mortality risk during an inte.pdf;C\:\\Users\\Me\\Zotero\\storage\\XHX755GA\\s41467-019-12380-6.html}
+}
+
 @article{stovallTreeHeightExplains2019a,
   title = {Tree Height Explains Mortality Risk during an Intense Drought},
   author = {Stovall, Atticus E. L. and Shugart, Herman and Yang, Xi},
@@ -9007,6 +9138,24 @@
   abstract = {In Olea europaea trichome density and UV-B absorbing compounds of leaf hairs and the lamina proper of leaves located in south-facing, north-facing and…},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\T9QKHIAF\\S0098847297000051.html}
+}
+
+@article{trouillierSizeMattersComparison2018,
+  title = {Size Matters—a Comparison of Three Methods to Assess Age- and Size-Dependent Climate Sensitivity of Trees},
+  author = {Trouillier, Mario and van der Maaten-Theunissen, Marieke and Scharnweber, Tobias and Würth, David and Burger, Andreas and Schnittler, Martin and Wilmking, Martin},
+  options = {useprefix=true},
+  date = {2018-02-01},
+  journaltitle = {Trees},
+  volume = {33},
+  number = {1},
+  pages = {183--192},
+  issn = {1432-2285},
+  doi = {10.1007/s00468-018-1767-z},
+  url = {https://doi.org/10.1007/s00468-018-1767-z},
+  urldate = {2021-07-27},
+  abstract = {Changes in tree’s climate sensitivity during their ontogenetic development is best assessed with stem diameter classes, which can be calculated retrospectively from the cumulative ring width.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\LZE2E7GC\\Trouillier et al. - 2019 - Size matters—a comparison of three methods to asse.pdf}
 }
 
 @article{truebaThresholdsLeafDamage2019,
