--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -348,53 +348,22 @@ However, NSC reserves increase with tree size, such that larger trees have relat
 
 
 **Vertical gradients also affect the climate sensitivity of metabolism and growth.** 
-Because $g_s$ tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and $VPD$, low RH) than by low soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016], the taller trees that occupy canopy positions in relatively dense-canopy forests tend to have greater reductions in whole-tree transpiration and photosynthesis during periods of high atmospheric demand - be these on time scale of hours, days, or seasons [@christoffersenLinkingHydraulicTraits2016; Garcia et al. 2021],consistent with the observation that  $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees (e.g., Mediavilla & Escudero 2004)-- often combined with greater effective rooting depth--may offset greater xylem embolism risk (Olson et al. 2018, Garcia et al. 2021, Chitra-Tarak et al. 2021) and lower capacity to adjust traits related to carbon metabolism to drought (Bartholomew et al., 2020). This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height (Table 1; McDowell 2011).
-
-- Taller trees in the Amazon had greater stomatal sensitivity to drought, resulting in greater reductions transpiration and photosynthesis [@garciaImportanceHydraulicStrategy2021].
-- @christoffersenLinkingHydraulicTraits2016 uses trait-based modeling to show that canopy trees have lower dry-season: wet-season transpiration. 
-- Smaller trees also have greater capacity to adjust traits realted carbon metabolism to drought [@bartholomewSmallTropicalForest2020]
-- *(it would be good to find a relevant study for open forests-- perhaps track down studies mentioned by Bev Law)*
-
+Because $g_s$ tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) than by low soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016], the taller trees that occupy canopy positions in relatively dense-canopy forests tend to have greater reductions in whole-tree transpiration and photosynthesis during periods of high atmospheric demand - be these on time scale of hours, days, or seasons [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021],consistent with the observation that  $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table 1, @mcdowellRelationshipTreeHeight2011].
 
 The interannual climate sensitivity of annual woody growth can be determined through analysis of tree-ring increments.
-While it is generally accepted that large, exposed trees display the greatest climate sensitivity and are therefore best for climate reconstructions (**REFS--KAT**), only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
-These have generally found greater sensitivity to low precipitation or high summer temperatures among larger, more exposed trees [**Fig. `r fig_treerings`**, @mcgregorTreeHeightLeaf2021; @anderson-teixeiraJointEffectsClimate2021] , corroborating evidence from forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015].
-Despite the potential for shorter trees in open forests to experience greater environmental stress [*Fig. `r fig_schematic`b*; **REFS**], this pattern has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraJointEffectsClimate2021].
+While it is generally accepted that large, exposed trees display the greatest climate sensitivity and are therefore best for climate reconstructions [@frittsTreeRingsClimate1976], only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
+These have generally found greater sensitivity to low precipitation or high summer temperatures among larger, more exposed trees [**Fig. `r fig_treerings`**, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021; @anderson-teixeiraJointEffectsClimate2021], corroborating evidence from globally disurbed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. In addition to this lower drought resistance of growth, larger trees also frequently exhibit lower resilience [@mcgregorTreeHeightLeaf2021; **REF**] and greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
+Despite the potential for shorter trees in open forests to experience greater environmental stress [**REFS**], this pattern has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraCarbonCyclingMature2021].
 
-There are, however, notable exceptions to the pattern of greater growth reductions under high $T_{air}$ among larger trees.
-In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory].
-Similarly, in tropical forests higher night-time temperatures have been associated with decelerating tree growth rates predominantly in smaller trees *but also in taller trees* [@clarkTropicalRainForest2003; @clarkAnnualWoodProduction2010; @feeleyDeceleratingGrowthTropical2007b; @vlamTemperatureRainfallStrongly2014*].
-Potential mechanisms for these patterns include increases in nighttime respiratory carbon loss that disproportionately reduced carbon availability for growth among small trees, or that understory $g_s$  might be stifled under humid conditions, resulting in higher $T_{leaf}$ (Fig. `r fig_leaf_T`) and lower photosynthesis. 
-It is also possible that higher temperatures reduce understory tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. 
-Additional research is required to understand these mechanisms and to disentangle tree growth responses to hot-wet versus hot-dry conditions.
+There are, however, exceptions to the pattern of greater growth reductions under high $T_{air}$ among larger trees.
+In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2021].
+Potential mechanisms for these patterns include stifling of understory ??E under still, humid conditions, resulting in above-optimal $T_{leaf}$ (Fig. 3) and lower photosynthesis, increases nighttime respiratory carbon loss that disroportionately reduced carbon availability for growth among small trees accelerated asymmetric competition. Additional research is required to understand these mechanisms and to disentangle tree growth responses to hot-wet versus hot-dry conditions. 
 
-
-
-
-~~~ 
-misc content to incorpoarte:
-
-- evidence in mesic temperate and subtropical eucalyptus forests shows that higher temperatures primarily reduced tree growth through altering water availability  [@bowmanWarmerWorldWill2014]. 
-
-- In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. ALso, tropical warming experiment showed increased growth (**Winter**)
-
-Phenologically, in temperate deciduous and mesic forests, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019].  However, later in spring, short-term heat waves can negatively impact partially-expanded canopy leaves by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves more severly than in understory saplings that are buffered [@filewodImpactsSpringHeat2014]. Increase in summer temperature is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018].
-
-
-*In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
-
-~~~~
-
-![**Figure `r fig_treerings`. DRAFT tree-rings figure. Current figure shows (a) drought responses as a function of height in a temperate broadleaf forest (SCBI), from McGregor et al. 2020; (b) responses to growing season temperature in eight New England forests, from Rollinson et al. 2020.  I'M NOT SURE THIS IS WHAT WE WANT, BUT I THINK SOME SORT OF TREE-RING FIGURE WOULD BE GOOD. [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/tree_rings_draft.png)
-
-**Tree mortality risk from climate-related stress is also size-structured.**
-
-- most common trend is higher risk of drought mortality for larger trees [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019b], including in open forests (**REFS**). *(However, there are exceptions...)*
-- also, greater risks of lightning, blow-down, etc.  (@goraImplicationsSizedependentTree2021) *(although this isn't temperature-related, so should get minimal attention, if at all)*
+![**Figure `r fig_treerings`. DRAFT tree-rings figure. Current figure shows (a) drought responses as a function of height in a temperate broadleaf forest (SCBI), from McGregor et al. 2020; (b) responses to growing season temperature in eight New England forests, from Rollinson et al. 2020. [ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/tree_rings_draft.png)
 
 ### C and water flux
 
-**Canopy trees account for the majority of forest ecosystem metabolism-- i.e., transpiration, GPP, woody productivity ($ANPP_{woody}$).**
+**Canopy trees account for the majority of forest ecosystem water and carbon cycling.**
 
 - ET: "Leaf-scale properties and processes aggregate non-linearly  in vertical and horizontal space, influencing stand-level ecosystem processes, and in turn biosphere-atmosphere exchanges of water, carbon, energy, and trace gases. As described above, variation in temperature across vertical gradients can interact with local light conditions and other vertically varying meteorological conditions to affect species composition (e.g., see @nakamuraForestsTheirCanopies2017), leaf traits, and photosynthesis . Linked to this local biophysical variation is the partitioning of evapotranspiration ($ET$) into soil evaporation, canopy evaporation, and transpiration, which occur across varying spatiotemporal scales depending on light availability, water stress, stomatal physiology, and turbulent transfer (Lawrence et al. 2007, Staudt et al. 2011). Vertical microclimate gradients interact with vertical variation in foliage density, influencing not only the location of evapotranspiration in the canopy, but also differences in rates and net gross primary productivity ($GPP$, Banerjee & Linn 2018). It has been demonstrated that net carbon assimilation and transpiration can vary substantially for forest canopies with the same LAI but different leaf area density distributions (e.g., Katul et al 2004 , Banerjee & Linn 2018). Further, although transpiration tends to be the dominant component of ET, partitioning is more complex in open canopies where soil evaporation can become more dominant (Baldocchi et al. 2004, Ma et al. 2020), likely affecting vertical thermal gradients. In other words, it matters whether foliage is dense or sparse, and whether it is concentrated higher in the canopy, lower in the canopy, or evenly distributed throughout." *(condense this by quite a lot. I don't think all the info here is necessary)*
 - ET : "Still, partitioning $ET$ into its constituent components, let alone vertically partitioning transpiration rates in the canopy, remains a challenge. Eddy covariance techniques, sap flow measurements, and stable isotope analysis offer useful tools, although errors can be large (Williams et al 2004, Herbst et al. 1996). To date, empirical analyses of ET vertical partitioning and interactions with temperature and vegetation structure have be concentrated in midlatitude ecosystems (e.g. Haverd et al 2009, 2011, Staudt et al. 2011, Ringgaard et al. 2014) *(KAT: but see Kunert et al. 2017 -not sure if this is equivalent)*. " - *(revise this to focus on the observed patterns, with at most brief mention of the methods)*
